# qt_chat_bubble

./: .gitignore  CMakeLists.txt  README.md
src/: chat_bubble.cc  chat_bubble.h  chat_item.cc  chat_item.h  chat_item.ui
test/: main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
